--- a/css/style.css
+++ b/css/style.css
@@ -322,10 +322,6 @@ a{
     margin-bottom: 7rem;
 }
 
-.work_main_img_50{
-    
-}
-
 .work_main_img_25{
     margin-bottom: 2rem;
 }
@@ -347,101 +343,78 @@ a{
 }
 
 
-/* CAREERS */
+/*CAREERS*/
 
 .careers_main_container{
-    width: 100%;
-    overflow: hidden;
-    padding-top: 15rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.careers_main_section1{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10rem;
-    width: 80%;
-}
-
-.careers_main_section1_col1{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding-top: 20rem;
+    padding-bottom: 10rem;
+    width: 90%;
 }
 
 .careers_main_section2{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-bottom: 10rem;
-    width: 80%;
     padding-top: 10rem;
 }
 
-.careers_main_section2_row1{
-    padding-bottom: 10rem;
-    width: 100%;
+.careers_illustration{
+    width: 90%;
 }
 
-.careers_main_section2_row1{
-    width: 100%;
-}
 
-.display_block{
-    display: block;
-    box-sizing: content-box;
-}
-
-.width_100{
-    width: 100%;
-}
+/*CAREERS accordion*/
 
 .accordion{
     background: transparent;
-    width: 60vw;
 }
+
 .accordion-item{
     background-color: #2C3238;
     border: none;
+    margin-bottom: 2rem;
 }
 
 .accordion-body{
     background-color: #2C3238;
+    outline: none;
+    border: none;
 }
 
-.accordion-button{
+.accordion-header{
+    border-radius: 12px;
+    outline: 1px solid #F3f6f0;
     height: 7rem;
-    background: transparent;
-    outline: none
-}
-
-.accordion-button:focus{
-    background-color:  #FFE500;
-    color: #2C3238;
-}
-
-.accordion-button:not(.collapsed){
-    background-color:  #FFE500;
-    color: #2C3238;
-    border-radius: 0 0 12px 12px;
     
 }
 
-.accordion-button::after{
+.accordion-button{
     background: transparent;
+    margin-top: 0;
+    padding-top: 2rem;
     outline: none;
-    color: #F3F6F0
+    border: none;
+    height: 7rem;
+    border-radius: 12px;
+    margin-bottom: 2rem;
 }
 
-.accordion-button:not(.collapsed)::after{
-    background-color:  #FFE500;
-    color: #2C3238;
+.accordion-button:focus{
+    background: transparent;
+    color: #F3F6F0;
+    margin-top: 0;
+    padding-top: 2rem;
+    outline: none;
+    border: none;
+}
+
+.accordion-button:not(.collapsed){
+    background: transparent;
+    color: #F3F6F0;
+    margin-top: 0;
+    padding-top: 2rem;
+    
+}
+
+.collapsed, .open{
+    margin-bottom: 2rem;
 }
 
 .span_underline{
@@ -449,39 +422,52 @@ a{
 }
 
 .careers_main_section3{
-    width: 80%;
     padding-top: 10rem;
     padding-bottom: 20rem;
 }
 
-.careers_main_section3_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+
+@media only screen and (max-width: 990px) {
+
+    .careers_main_container_text{
+        padding-bottom: 10rem;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+
+    .careers_main_section2_col1{
+        padding-bottom: 5rem;
+    }
 }
 
 
 
 
-
-/* CONTACT */
+/*CONTACT*/
 
 .contact_main_container{
     padding-top: 20rem;
     padding-bottom: 10rem;
     margin: 0 auto;
+    width: 90%;
 }
 
 .contact_main_section2{
     padding-top: 10rem;
 }
 
+.contact_illustration{
+    width: 90%;
+}
 
-/*****CONTACT FORM*****/
+
+/*CONTACT form*/
 
 .form-area{
     padding-top: 10rem;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .form_input{
@@ -506,63 +492,35 @@ button{
     border: none;
 }
 
+/*CONTACT responsive*/
 
-/*responsive*/
+@media only screen and (max-width: 576px) {
 
-@media only screen and (min-width: 992px) {
+    .contact_main_container{
+       width: 90%;
+    }
+}
+
+@media only screen and (min-width: 991px) {
 
     .contact_main_container_text{
         padding-left: 10rem;
     }
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 990px) {
 
     .contact_main_container_text{
         padding-top: 10rem;
     }
-
-
 }
 
+@media only screen and (min-width: 1201px) {
 
-
-
-
-
-
-@media (min-width:768px) and (max-width:991px){
-    .right i {
-	top: -52px;
-	transform: rotate(90deg);
-	left: 50%;
+    .h3_contact{
+        padding-right: 1rem;
+    }
 }
-}
-
-@media (max-width:767px){
-    .left {
-  padding: 90px 15px;
-  text-align: center;
-}
-.left h2 {
-  font-size: 25px;
-}
-.right {
-  padding: 25px;
-}
-.right i {
-  top: -52px;
-  transform: rotate(90deg);
-  left: 46%;
-}
-    .right button {
-	width: 150px;
-	padding: 12px 0;
-}
-    
-}
-
-
 
 /*
 ---------------------------------------------------------------------------------------------------------
@@ -582,13 +540,6 @@ BUTTONS
 
 .btn--large:hover{
     background-color: #F3F6F0;
-    width: 240px;
-    height: 72px;
-    border-radius: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .btn--large--light{
@@ -601,6 +552,10 @@ BUTTONS
     justify-content: center;
     align-items: center;
     box-shadow: 4px 8px 8px 0px rgba(35, 35, 35, 0.20);
+}
+
+.btn--large--light:hover{
+    background-color:  #2C3238;
 }
 
 .p--light{
@@ -616,16 +571,34 @@ BUTTONS
     color:  #f3f6f0;
 }
 
-.btn--large--light:hover{
-    background-color:  #2C3238;
-    width: 240px;
-    height: 72px;
+.btn--secondary{
+    background-color: #FFE500;
+    width: 130px;
+    height: 48px;
     border-radius: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: 4px 8px 8px 0px rgba(35, 35, 35, 0.20);
+    margin-top: 1rem;
+}
+
+.btn--secondary:hover{
+    background-color: #F3f6f0;
+}
+
+.p_btn_secondary{
+    font-family: "mySecondFont";
+    font-size: 1.5rem;
+    line-height: 4rem;
+    color:  #2C3238;
+    text-align: center;
+    text-decoration: none;
+}
+
+.p_btn_secondary:hover{
+    color:  #2C3238;
 }
 
 /*
@@ -714,8 +687,8 @@ TEXT STYLE
 
 .h4_about{
     font-family: "mySecondFont";
-    font-size: 8rem;
-    line-height: 12rem;
+    font-size: 6rem;
+    line-height: 10rem;
 }
 
 .h5_about{
@@ -929,12 +902,9 @@ header{
     }
 }
 
-
-
 .nav-link{
     list-style-type: none;  
 }
-
 
 .li--light{ 
     font-family: "myFirstFont-bold";
@@ -1044,4 +1014,16 @@ footer{
     padding-top: 4rem;
 }
     
+}
+
+
+
+
+.display_block{
+    display: block;
+    box-sizing: content-box;
+}
+
+.width_100{
+    width: 100%;
 }
